@@ -120,8 +120,8 @@ function(x, y, alternative = c("two.sided", "less", "greater"),
                            integer(1),
                            as.logical(lower.tail),
                            PACKAGE = "stats")$p
-		    else { # for large n: aymptotic t_{n-2}
-			r <- 1 - 6 * q / (n*(n-1)*(n+1))
+		    else { # for large n: asymptotic t_{n-2}
+			r <- 1 - 6 * q / (n*(n^2-1)) # careful for overflow
 			pt(r / sqrt((1 - r^2)/(n-2)), df = n-2,
 			   lower.tail= !lower.tail)
 		    }
