@@ -629,6 +629,9 @@ BUG FIXES
 	Coercion of a list to raw was behaving inconsistently for
 	out-of-range values (and not warning).
 
+    o	cor.test(method = "spearman") gave NA p-values for _very_ long
+	vectors. (PR#8087)
+
 
 
 		CHANGES IN R VERSION 2.1.1
